[project]
name = "mental-health-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
